test/tests/stages/5_local_variables/invalid_parse/compound_invalid_operator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  identifier(a)
  +
  =
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
